--- a/web/index.html
+++ b/web/index.html
@@ -10,20 +10,17 @@
         <meta name="description" content=""/>
         <link rel="canonical" href=""/>
 
-        <!-- Facebook Open Graph Metatags -->
         <meta property="og:type" content=""/>
         <meta property="og:title" content=""/>
         <meta property="og:description" content=""/>
         <meta property="og:image" content=""/>
         <meta property="og:url" content=""/>
 
-        <!-- Schema.org Metatags -->
         <meta itemprop="name" content=""/>
         <meta itemprop="description" content=""/>
         <meta itemprop="image" content=""/>
         <meta itemprop="url" content=""/>
 
-        <!-- Twitter Metatags -->
         <meta name="twitter:card" content=""/>
         <meta name="twitter:title" content=""/>
         <meta name="twitter:description" content=""/>
@@ -31,6 +28,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
         <link rel="icon" href="favicon.ico"/>
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata:400,700"/>
         <link rel="stylesheet" href="css/vendor.css"/>
         <link rel="stylesheet" href="css/screen.css"/>
 
@@ -40,73 +38,27 @@
         <div id="fb-root"></div>
         <header>
             <div class="center">
-                <h1 class="logo"><a href="/">Title</a></h1>
+                <h1 class="logo"><a href="/">Title10</a></h1>
                 <nav role="navigation">
                     <ul>
                         <li><a href="#">Item #1</a></li>
                         <li><a href="#">Item #2</a></li>
                         <li><a href="#">Item #3</a></li>
                     </ul>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis arcu eu sollicitudin tempor. Aenean dolor quam, efficitur in semper eu, tincidunt in nulla. Praesent id maximus metus. Sed gravida, quam ac porta vehicula, felis eros sodales elit, eu egestas risus lectus sed dui. Nullam sed diam mauris. Sed id condimentum elit, sit amet eleifend massa. Etiam porta justo venenatis nisi finibus, sit amet accumsan turpis efficitur. Ut dignissim fringilla iaculis. Ut commodo auctor arcu non placerat. In euismod elit tincidunt aliquam sodales. In semper, elit eget vestibulum condimentum, metus tellus vestibulum ex, id pretium felis velit malesuada lacus. Nam venenatis eros sit amet turpis auctor, quis condimentum arcu tempus. Nulla condimentum vitae dolor accumsan faucibus. Etiam commodo blandit nunc vitae ornare. Etiam tempor faucibus odio tristique ultrices.</p>
                 </nav>
             </div>
         </header>
         <div id="main" role="main" class="main">
             <div class="center">
-                <div class="share">
-                    <div class="fb">
-                        <div class="fb-like" data-href="http://google.com.br" data-send="false" data-layout="button_count" data-width="65" data-show-faces="false"></div>
-                    </div>
-                    <div class="tw">
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-via="eusoubh" data-lang="en" data-text="">Tweet</a>
-                    </div>
-                    <div class="gp">
-                        <div class="g-plusone" data-size="medium" data-href="http://google.com.br"></div>
-                    </div>
-                </div>
-                <div class="fit-video">
-                    <iframe width="425" height="240" src="http://www.youtube.com/embed/M7FIvfx5J10" frameborder="0" allowfullscreen></iframe>
-                </div>
             </div>
         </div>
         <footer>
         </footer>
         <script src="js/vendor.min.js"></script>
         <script src="js/main.min.js"></script>
-
-        <!-- Golden Grid System Guide -->
         <script src="js/vendor/dev/GGS.js"></script>
-
-        <!-- Social API Scripts -->
         <script>
-
-            // facebook
-
-            (function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
-                js.src = "//connect.facebook.net/en_US/all.js#xfbml=1v2.3&&appId=155658704635453";
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));
-
-            // twitter
-
-            !function(d,s,id){
-                var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-                if(!d.getElementById(id)){
-                js=d.createElement(s); js.id=id;
-                js.src=p+'://platform.twitter.com/widgets.js';
-                fjs.parentNode.insertBefore(js,fjs);
-            }}(document, 'script', 'twitter-wjs');
-
-            // google plus
-
-            window.___gcfg = {lang: 'en-US'};
-            (function() {
-                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-                po.src = 'https://apis.google.com/js/platform.js';
-                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-            })();
 
             // analytics
 
@@ -115,7 +67,7 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'XX-XXXXXXXX-X', 'domain.com');
+            ga('create', 'UA-6977973-1', 'auto');
             ga('send', 'pageview');
 
         </script>
