--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
         <div id="fb-root"></div>
         <header>
             <div class="center">
-                <h1 class="logo"><a href="/">Title10</a></h1>
+                <h1 class="logo"><a href="/">Title</a></h1>
                 <nav role="navigation">
                     <ul>
                         <li><a href="#">Item #1</a></li>
@@ -50,11 +50,25 @@
             </div>
         </header>
         <div id="main" role="main" class="main">
-            <div class="center">
+            <div class="row" id="home" style="background: white;">
+                HOME
+            </div>
+            <div class="row" id="content" style="background: yellow;">
+                <div class="tile">
+                    <div class="center">
+                        TILE 1
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="center">
+                        TILE 2
+                    </div>
+                </div>
+                <footer style="background: pink;">
+                    FOOTER
+                </footer>
             </div>
         </div>
-        <footer>
-        </footer>
         <script src="js/vendor.min.js"></script>
         <script src="js/main.min.js"></script>
         <script src="js/vendor/dev/GGS.js"></script>
