--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
         </audio>
         <header>
             <div class="center">
-                <h1 class="logo title"><a href="/">Hello</a></h1>
+                <h1 class="logo title"><a href="/">Hello.</a></h1>
                 <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
                 <!-- <nav role="navigation">
                     <ul>
