--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,11 @@
         <script src="js/vendor/modernizr.js"></script>
     </head>
     <body>
-        <div id="fb-root"></div>
+        <progress value="0" id="progressBar" class="flat">
+            <div class="progress-container">
+                <span class="progress-bar"></span>
+            </div>
+        </progress>
         <audio id="glitch" preload="auto">
             <source src="" type="audio/mpeg">
         </audio>
