--- a/web/index.html
+++ b/web/index.html
@@ -63,27 +63,59 @@
             <div class="row" id="content">
                 <div class="tile">
                     <div class="center">
-                        <h1>TILE 1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis arcu eu sollicitudin tempor. Aenean dolor quam, efficitur in semper eu, tincidunt in nulla. Praesent id maximus metus. Sed gravida, quam ac porta vehicula, felis eros sodales elit, eu egestas risus lectus sed dui. Nullam sed diam mauris. Sed id condimentum elit, sit amet eleifend massa. Etiam porta justo venenatis nisi finibus, sit amet accumsan turpis efficitur. Ut dignissim fringilla iaculis. Ut commodo auctor arcu non placerat. In euismod elit tincidunt aliquam sodales. In semper, elit eget vestibulum condimentum, metus tellus vestibulum ex, id pretium felis velit malesuada lacus. Nam venenatis eros sit amet turpis auctor, quis condimentum arcu tempus. Nulla condimentum vitae dolor accumsan faucibus. Etiam commodo blandit nunc vitae ornare. Etiam tempor faucibus odio tristique ultrices.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis arcu eu sollicitudin tempor. Aenean dolor quam, efficitur in semper eu, tincidunt in nulla. Praesent id maximus metus. Sed gravida, quam ac porta vehicula, felis eros sodales elit, eu egestas risus lectus sed dui. Nullam sed diam mauris. Sed id condimentum elit, sit amet eleifend massa. Etiam porta justo venenatis nisi finibus, sit amet accumsan turpis efficitur. Ut dignissim fringilla iaculis. Ut commodo auctor arcu non placerat. In euismod elit tincidunt aliquam sodales. In semper, elit eget vestibulum condimentum, metus tellus vestibulum ex, id pretium felis velit malesuada lacus. Nam venenatis eros sit amet turpis auctor, quis condimentum arcu tempus. Nulla condimentum vitae dolor accumsan faucibus. Etiam commodo blandit nunc vitae ornare. Etiam tempor faucibus odio tristique ultrices.</p>
+                        <h2 class="title"><a href="http://inkstarter.cc" rel="external">InkStarter</a></h2>
+                        <p>Platform about tattoos for fearless people.</p>
                     </div>
                 </div>
                 <div class="tile">
                     <div class="center">
-                        <h1>TILE 2</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis arcu eu sollicitudin tempor. Aenean dolor quam, efficitur in semper eu, tincidunt in nulla. Praesent id maximus metus. Sed gravida, quam ac porta vehicula, felis eros sodales elit, eu egestas risus lectus sed dui. Nullam sed diam mauris. Sed id condimentum elit, sit amet eleifend massa. Etiam porta justo venenatis nisi finibus, sit amet accumsan turpis efficitur. Ut dignissim fringilla iaculis. Ut commodo auctor arcu non placerat. In euismod elit tincidunt aliquam sodales. In semper, elit eget vestibulum condimentum, metus tellus vestibulum ex, id pretium felis velit malesuada lacus. Nam venenatis eros sit amet turpis auctor, quis condimentum arcu tempus. Nulla condimentum vitae dolor accumsan faucibus. Etiam commodo blandit nunc vitae ornare. Etiam tempor faucibus odio tristique ultrices.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis arcu eu sollicitudin tempor. Aenean dolor quam, efficitur in semper eu, tincidunt in nulla. Praesent id maximus metus. Sed gravida, quam ac porta vehicula, felis eros sodales elit, eu egestas risus lectus sed dui. Nullam sed diam mauris. Sed id condimentum elit, sit amet eleifend massa. Etiam porta justo venenatis nisi finibus, sit amet accumsan turpis efficitur. Ut dignissim fringilla iaculis. Ut commodo auctor arcu non placerat. In euismod elit tincidunt aliquam sodales. In semper, elit eget vestibulum condimentum, metus tellus vestibulum ex, id pretium felis velit malesuada lacus. Nam venenatis eros sit amet turpis auctor, quis condimentum arcu tempus. Nulla condimentum vitae dolor accumsan faucibus. Etiam commodo blandit nunc vitae ornare. Etiam tempor faucibus odio tristique ultrices.</p>
+                        <h2 class="title"><a href="http://curis.co" rel="external">CURISCO</a></h2>
+                        <p>Office Pocket-Gardening.</p>
                     </div>
                 </div>
                 <div class="tile">
                     <div class="center">
-                        <h1>TILE 2</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis arcu eu sollicitudin tempor. Aenean dolor quam, efficitur in semper eu, tincidunt in nulla. Praesent id maximus metus. Sed gravida, quam ac porta vehicula, felis eros sodales elit, eu egestas risus lectus sed dui. Nullam sed diam mauris. Sed id condimentum elit, sit amet eleifend massa. Etiam porta justo venenatis nisi finibus, sit amet accumsan turpis efficitur. Ut dignissim fringilla iaculis. Ut commodo auctor arcu non placerat. In euismod elit tincidunt aliquam sodales. In semper, elit eget vestibulum condimentum, metus tellus vestibulum ex, id pretium felis velit malesuada lacus. Nam venenatis eros sit amet turpis auctor, quis condimentum arcu tempus. Nulla condimentum vitae dolor accumsan faucibus. Etiam commodo blandit nunc vitae ornare. Etiam tempor faucibus odio tristique ultrices.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis arcu eu sollicitudin tempor. Aenean dolor quam, efficitur in semper eu, tincidunt in nulla. Praesent id maximus metus. Sed gravida, quam ac porta vehicula, felis eros sodales elit, eu egestas risus lectus sed dui. Nullam sed diam mauris. Sed id condimentum elit, sit amet eleifend massa. Etiam porta justo venenatis nisi finibus, sit amet accumsan turpis efficitur. Ut dignissim fringilla iaculis. Ut commodo auctor arcu non placerat. In euismod elit tincidunt aliquam sodales. In semper, elit eget vestibulum condimentum, metus tellus vestibulum ex, id pretium felis velit malesuada lacus. Nam venenatis eros sit amet turpis auctor, quis condimentum arcu tempus. Nulla condimentum vitae dolor accumsan faucibus. Etiam commodo blandit nunc vitae ornare. Etiam tempor faucibus odio tristique ultrices.</p>
+                        <h2 class="title"><a href="http://placevom.it" rel="external">Placevomit</a></h2>
+                        <p>Image placeholder for disgusting layouts.</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="center">
+                        <h2 class="title"><a href="http://ijwgh.club" rel="external">IJWGH</a></h2>
+                        <p>Just random oddities from the internet.</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="center">
+                        <h2 class="title"><a href="http://xxxxxxx.ooo" rel="external">XXXXXXXOOO</a></h2>
+                        <p>Personal Dumplr.</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="center">
+                        <h2 class="title"><a href="http://founders.com.br" rel="external">Founders</a></h2>
+                        <p>Digital agency. I work here! :)</p>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="center">
+                        <h2 class="title"><a href="http://cacete.co" rel="external">Cacete</a></h2>
+                        <p>Premium clothing brand.</p>
                     </div>
                 </div>
                 <footer>
-                    FOOTER
+                    <div class="center">
+                        <p>
+                            Archive ―
+                            <a href="http://v6.setetres.st" rel="external">6.0</a>
+                            <a href="http://v5.setetres.st" rel="external">5.0</a>
+                            <a href="http://v4.setetres.st" rel="external">4.0</a>
+                            <a href="http://v3.setetres.st" rel="external">3.0</a>
+                            <a href="http://v2.setetres.st" rel="external">2.0</a>
+                            <a href="http://1997.setetres.st" rel="external">1.997</a>
+                            <a href="http://v1.setetres.st" rel="external">1.0</a>
+                        </p>
+                    </div>
                 </footer>
             </div>
         </div>
