--- a/web/index.html
+++ b/web/index.html
@@ -35,11 +35,7 @@
         <script src="js/vendor/modernizr.js"></script>
     </head>
     <body>
-        <progress value="0" id="progressBar" class="flat">
-            <div class="progress-container">
-                <span class="progress-bar"></span>
-            </div>
-        </progress>
+        <div class="progress-container"><span class="progress-bar"></span></div>
         <audio id="glitch" preload="auto">
             <source src="" type="audio/mpeg">
         </audio>
@@ -62,46 +58,56 @@
             </div>
             <div class="row" id="content">
                 <div class="tile">
-                    <div class="center">
-                        <h2 class="title"><a href="http://inkstarter.cc" rel="external">InkStarter</a></h2>
-                        <p>Platform about tattoos for fearless people.</p>
-                    </div>
-                </div>
-                <div class="tile">
-                    <div class="center">
-                        <h2 class="title"><a href="http://curis.co" rel="external">CURISCO</a></h2>
-                        <p>Office Pocket-Gardening.</p>
-                    </div>
-                </div>
-                <div class="tile">
-                    <div class="center">
-                        <h2 class="title"><a href="http://placevom.it" rel="external">Placevomit</a></h2>
-                        <p>Image placeholder for disgusting layouts.</p>
-                    </div>
-                </div>
-                <div class="tile">
-                    <div class="center">
-                        <h2 class="title"><a href="http://ijwgh.club" rel="external">IJWGH</a></h2>
-                        <p>Just random oddities from the internet.</p>
-                    </div>
-                </div>
-                <div class="tile">
-                    <div class="center">
-                        <h2 class="title"><a href="http://xxxxxxx.ooo" rel="external">XXXXXXXOOO</a></h2>
-                        <p>Personal Dumplr.</p>
-                    </div>
-                </div>
-                <div class="tile">
-                    <div class="center">
-                        <h2 class="title"><a href="http://founders.com.br" rel="external">Founders</a></h2>
-                        <p>Digital agency. I work here! :)</p>
-                    </div>
-                </div>
-                <div class="tile">
-                    <div class="center">
-                        <h2 class="title"><a href="http://cacete.co" rel="external">Cacete</a></h2>
-                        <p>Premium clothing brand.</p>
-                    </div>
+                    <ul class="projects">
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://inkstarter.cc" rel="external">InkStarter</a></h2>
+                                <p>Platform about tattoos for fearless people.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://curis.co" rel="external">CURISCO</a></h2>
+                                <p>Office Pocket-Gardening.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://placevom.it" rel="external">Placevomit</a></h2>
+                                <p>Image placeholder for disgusting layouts.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://ijwgh.club" rel="external">IJWGH</a></h2>
+                                <p>Just random oddities from the internet.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://xxxxxxx.ooo" rel="external">XXXXXXXOOO</a></h2>
+                                <p>Personal Dumplr.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://founders.com.br" rel="external">Founders</a></h2>
+                                <p>Digital agency. I work here! :)</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://cacete.co" rel="external">Cacete</a></h2>
+                                <p>Premium clothing brand.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="center">
+                                <h2 class="title"><a href="http://inkstarter.cc" rel="external">InkStarter</a></h2>
+                                <p>Platform about tattoos for fearless people.</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <footer>
                     <div class="center">
