--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,12 @@
         <audio id="glitch" preload="auto">
             <source src="" type="audio/mpeg">
         </audio>
+        <audio id="soundtrack" preload="auto" loop>
+            <source src="../mp3/TR-1.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="soundtrack-up" preload="auto" loop>
+            <source src="../mp3/TR-2.mp3" type="audio/mpeg">
+        </audio>
         <header>
             <div class="center">
                 <h1 class="logo title"><a href="/">Hello.</a></h1>
