--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,7 @@
 
         <style>
             #stats { position: absolute; top:0; left: 0; z-index: 100 !important; }
+            .dg.ac {z-index: 100 !important;}
         </style>
 
         <script src="js/vendor/modernizr.js"></script>
@@ -156,14 +157,12 @@
         <script src="/three/MarchingCubes.js"></script>
         <script src="/three/ShaderToon.js"></script>
         <script src="/three/Detector.js"></script>
-        <script src="/three/libs/stats.min.js"></script>
-        <script src="/three/libs/dat.gui.min.js"></script>
         <script>
             if (! Detector.webgl) Detector.addGetWebGLMessage();
             var MARGIN = 0;
             var SCREEN_WIDTH = window.innerWidth;
             var SCREEN_HEIGHT = window.innerHeight;
-            var container, stats;
+            var container;
             var camera, scene, renderer;
             var materials, material, current_material;
             var light, pointLight, ambientLight;
@@ -201,8 +200,8 @@
                 effect.enableColors = false;
                 scene.add(effect);
                 // RENDERER
-                renderer = new THREE.WebGLRenderer();
-                renderer.setClearColor(0x15191d);
+                renderer = new THREE.WebGLRenderer({alpha: true});
+                renderer.setClearColor(0x15191d, 0);
                 renderer.setPixelRatio(window.devicePixelRatio);
                 renderer.setSize(SCREEN_WIDTH, SCREEN_HEIGHT);
                 renderer.domElement.style.position = "absolute";
@@ -215,9 +214,6 @@
                 // CONTROLS
                 controls = new THREE.OrbitControls(camera, renderer.domElement);
                 controls.noZoom = true;
-                // STATS
-                stats = new Stats();
-                container.appendChild(stats.domElement);
                 // COMPOSER
                 renderer.autoClear = false;
                 var renderTargetParameters = { minFilter: THREE.LinearFilter, magFilter: THREE.LinearFilter, format: THREE.RGBFormat, stencilBuffer: false };
@@ -320,29 +316,6 @@
                     dummy: function() {
                     }
                 };
-
-                var h, m_h;
-                var gui = new dat.GUI();
-                // material (type)
-                h = gui.addFolder("Materials");
-                for (var m in materials) {
-                    effectController[ m ] = createHandler(m);
-                    h.add(effectController, m).name(m);
-                }
-                // material (color)
-                h = gui.addFolder("Material color");
-                m_h = h.add(effectController, "hex", '0x4b538b');
-                // light (directional)
-                h = gui.addFolder("Directional light orientation");
-                h.add(effectController, "lx", -1.0, 1.0, 0.025).name("x");
-                h.add(effectController, "ly", -1.0, 1.0, 0.025).name("y");
-                h.add(effectController, "lz", -1.0, 1.0, 0.025).name("z");
-                // simulation
-                h = gui.addFolder("Simulation");
-                h.add(effectController, "speed", 0.1, 8.0, 0.05);
-                h.add(effectController, "numBlobs", 1, 50, 1);
-                h.add(effectController, "resolution", 14, 40, 1);
-                h.add(effectController, "isolation", 10, 300, 1);
             }
 
             // this controls content of marching cubes voxel field
