--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
                             <p>Platform about tattoos for fearless people.</p>
                         </li>
                         <li>
-                            <h2 class="title"><a href="http://curis.co" rel="external">CURISCO</a></h2>
+                            <h2 class="title"><a href="http://curis.co" rel="external">Curisco</a></h2>
                             <p>Office Pocket-Gardening.</p>
                         </li>
                         <li>
@@ -68,7 +68,7 @@
                             <p>Image placeholder for disgusting layouts.</p>
                         </li>
                         <li>
-                            <h2 class="title"><a href="http://ijwgh.club" rel="external">IJWGH</a></h2>
+                            <h2 class="title"><a href="http://ijwgh.club" rel="external">I just wanna go home</a></h2>
                             <p>Just random oddities from the internet.</p>
                         </li>
                         <li>
