--- a/web/index.html
+++ b/web/index.html
@@ -72,6 +72,14 @@
                             <p>Just random oddities from the internet.</p>
                         </li>
                         <li>
+                            <h2 class="title"><a href="http://evenbettermotherfucking.website" rel="external">Even better motherfucking website</a></h2>
+                            <p>Even better than the others motherfucking websites.</p>
+                        </li>
+                        <li>
+                            <h2 class="title"><a href="http://🚽💩.tk" rel="external">🚽💩</a></h2>
+                            <p>The coolest emoji domain ever.</p>
+                        </li>
+                        <li>
                             <h2 class="title"><a href="http://xxxxxxx.ooo" rel="external">XXXXXXXOOO</a></h2>
                             <p>Personal Dumplr.</p>
                         </li>
@@ -112,8 +120,8 @@
         <script src="//use.typekit.net/cgd6fke.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
         <script src="js/vendor.min.js"></script>
+        <script src="threejs/libs.min.js"></script>
         <script src="js/main.min.js"></script>
-        <script src="js/vendor/dev/GGS.js"></script>
         <script>
 
             // analytics
@@ -126,220 +134,6 @@
             ga('create', 'UA-6977973-1', 'auto');
             ga('send', 'pageview');
 
-        </script>
-
-        <!-- three.js -->
-
-        <script src="/three/controls/OrbitControls.js"></script>
-        <script src="/three/shaders/CopyShader.js"></script>
-        <script src="/three/shaders/FXAAShader.js"></script>
-        <script src="/three/shaders/HorizontalTiltShiftShader.js"></script>
-        <script src="/three/shaders/VerticalTiltShiftShader.js"></script>
-        <script src="/three/postprocessing/EffectComposer.js"></script>
-        <script src="/three/postprocessing/RenderPass.js"></script>
-        <script src="/three/postprocessing/ShaderPass.js"></script>
-        <script src="/three/MarchingCubes.js"></script>
-        <script src="/three/ShaderToon.js"></script>
-        <script src="/three/Detector.js"></script>
-        <script>
-            if (! Detector.webgl) Detector.addGetWebGLMessage();
-            var margin = 0;
-            var time = 0;
-            var screenWidth = window.innerWidth;
-            var screenHeight = window.innerHeight;
-            var clock = new THREE.Clock();
-            var ambientLight,
-                camera,
-                composer,
-                container,
-                current_material,
-                effect,
-                effectController,
-                hblur,
-                light,
-                material,
-                materials,
-                numBlobs,
-                pointLight,
-                renderer,
-                resolution,
-                scene,
-                effectFXAA,
-                vblur;
-
-            init();
-            animate();
-
-            function init() {
-                container = document.getElementById('container');
-                // CAMERA
-                camera = new THREE.PerspectiveCamera(45, screenWidth / screenHeight, 1, 10000);
-                camera.position.set(-500, 500, 1500);
-                // SCENE
-                scene = new THREE.Scene();
-                // LIGHTS
-                light = new THREE.DirectionalLight(0xffffff);
-                light.position.set(0.5, 0.5, 1);
-                scene.add(light);
-                ambientLight = new THREE.AmbientLight(0x080808);
-                scene.add(ambientLight);
-                // MATERIALS
-                materials = generateMaterials();
-                current_material = "hatching";
-                // MARCHING CUBES
-                resolution = 28;
-                numBlobs = 10;
-                effect = new THREE.MarchingCubes(resolution, materials[ current_material ].m, true, true);
-                effect.position.set(0, 0, 0);
-                effect.scale.set(700, 700, 700);
-                effect.enableUvs = false;
-                effect.enableColors = false;
-                scene.add(effect);
-                // RENDERER
-                renderer = new THREE.WebGLRenderer({alpha: true});
-                renderer.setClearColor(0x15191d, 0);
-                renderer.setPixelRatio(window.devicePixelRatio);
-                renderer.setSize(screenWidth, screenHeight);
-                renderer.domElement.style.position = "absolute";
-                renderer.domElement.style.top = margin + "px";
-                renderer.domElement.style.left = "0px";
-                container.appendChild(renderer.domElement);
-                //
-                renderer.gammaInput = true;
-                renderer.gammaOutput = true;
-                // CONTROLS
-                controls = new THREE.OrbitControls(camera, renderer.domElement);
-                controls.noZoom = true;
-                // COMPOSER
-                renderer.autoClear = false;
-                var renderTargetParameters = { minFilter: THREE.LinearFilter, magFilter: THREE.LinearFilter, format: THREE.RGBFormat, stencilBuffer: false };
-                renderTarget = new THREE.WebGLRenderTarget(screenWidth, screenHeight, renderTargetParameters);
-                effectFXAA = new THREE.ShaderPass(THREE.FXAAShader);
-                hblur = new THREE.ShaderPass(THREE.HorizontalTiltShiftShader);
-                vblur = new THREE.ShaderPass(THREE.VerticalTiltShiftShader);
-                var bluriness = 8;
-                hblur.uniforms[ 'h' ].value = bluriness / screenWidth;
-                vblur.uniforms[ 'v' ].value = bluriness / screenHeight;
-                hblur.uniforms[ 'r' ].value = vblur.uniforms[ 'r' ].value = 0.5;
-                effectFXAA.uniforms[ 'resolution' ].value.set(1 / screenWidth, 1 / screenHeight);
-                composer = new THREE.EffectComposer(renderer, renderTarget);
-                var renderModel = new THREE.RenderPass(scene, camera);
-                vblur.renderToScreen = true;
-                //effectFXAA.renderToScreen = true;
-                composer = new THREE.EffectComposer(renderer, renderTarget);
-                composer.addPass(renderModel);
-                composer.addPass(effectFXAA);
-                composer.addPass(hblur);
-                composer.addPass(vblur);
-                // GUI
-                setupGui();
-                // EVENTS
-                window.addEventListener('resize', onWindowResize, false);
-            }
-
-            function onWindowResize(event) {
-                screenWidth = window.innerWidth;
-                screenHeight = window.innerHeight - 2 * margin;
-                camera.aspect = screenWidth / screenHeight;
-                camera.updateProjectionMatrix();
-                renderer.setSize(screenWidth, screenHeight);
-                composer.setSize(screenWidth, screenHeight);
-                hblur.uniforms[ 'h' ].value = 4 / screenWidth;
-                vblur.uniforms[ 'v' ].value = 4 / screenHeight;
-                effectFXAA.uniforms[ 'resolution' ].value.set(1 / screenWidth, 1 / screenHeight);
-            }
-
-            function generateMaterials() {
-                // toons
-                var hatchingMaterial = createShaderMaterial("hatching", light, ambientLight);
-
-                var materials = {
-                    "hatching" :
-                    {
-                        m: hatchingMaterial,
-                        h: 0.2, s: 1, l: 0.9
-                    }
-                };
-                return materials;
-            }
-
-            function createShaderMaterial(id, light, ambientLight) {
-                var shader = THREE.ShaderToon[ id ];
-                var u = THREE.UniformsUtils.clone(shader.uniforms);
-                var vs = shader.vertexShader;
-                var fs = shader.fragmentShader;
-                var material = new THREE.ShaderMaterial({ uniforms: u, vertexShader: vs, fragmentShader: fs });
-                material.uniforms.uDirLightPos.value = light.position;
-                material.uniforms.uDirLightColor.value = light.color;
-                material.uniforms.uAmbientLightColor.value = ambientLight.color;
-                return material;
-            }
-
-            function setupGui() {
-
-                effectController = {
-                    speed: 0.73,
-                    numBlobs: 27,
-                    resolution: 27,
-                    isolation: 73,
-                    hex: '0x4b538b',
-                    lhue: 0.04,
-                    lsaturation: 1.0,
-                    llightness: 0.5,
-                    lx: -1,
-                    ly: 1,
-                    lz: 1,
-                    postprocessing: false,
-                    dummy: function() {
-                    }
-                };
-            }
-
-            // this controls content of marching cubes voxel field
-            function updateCubes(object, time, numblobs) {
-                object.reset();
-                // fill the field with some metaballs
-                var i, ballx, bally, ballz, subtract, strength;
-                subtract = 12;
-                strength = 1.2 / ((Math.sqrt(numblobs) - 1) / 4 + 1);
-                for (i = 0; i < numblobs; i ++) {
-                    ballx = Math.sin(i + 1.26 * time * (1.03 + 0.5 * Math.cos(0.21 * i))) * 0.27 + 0.5;
-                    bally = Math.abs(Math.cos(i + 1.12 * time * Math.cos(1.22 + 0.1424 * i))) * 0.77; // dip into the floor
-                    ballz = Math.cos(i + 1.32 * time * 0.1 * Math.sin((0.92 + 0.53 * i))) * 0.27 + 0.5;
-                    object.addBall(ballx, bally, ballz, strength, subtract);
-                }
-            }
-
-            function animate() {
-                requestAnimationFrame(animate);
-                render();
-            }
-
-            function render(){
-                var delta = clock.getDelta();
-                time += delta * effectController.speed * 0.5;
-                // marching cubes
-                if (effectController.resolution !== resolution) {
-                    resolution = effectController.resolution;
-                    effect.init(resolution);
-                }
-                if (effectController.isolation !== effect.isolation) {
-                    effect.isolation = effectController.isolation;
-                }
-                updateCubes(effect, time, effectController.numBlobs);
-                // materials
-                if (effect.material instanceof THREE.ShaderMaterial) {
-                    effect.material.uniforms.uBaseColor.value.setHex(effectController.hex);
-                } else {
-                    effect.material.color.setHex(effectController.hex);
-                }
-                // lights
-                light.position.set(effectController.lx, effectController.ly, effectController.lz);
-                light.position.normalize();
-                // render
-                renderer.clear();
-                renderer.render(scene, camera);
-            }
         </script>
     </body>
 </html>
