--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,6 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
         <link rel="icon" href="favicon.ico"/>
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata:400,700"/>
         <link rel="stylesheet" href="css/vendor.css"/>
         <link rel="stylesheet" href="css/screen.css"/>
 
@@ -43,7 +42,7 @@
         </audio>
         <header>
             <div class="center">
-                <h1 class="logo title"><a href="/">Hello.</a></h1>
+                <h1 class="logo title"><a href="/">Hello.</a><sup>7.0</sup></h1>
                 <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
                 <p>↕ scroll / <a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
             </div>
@@ -76,10 +75,6 @@
                             <p>Even better than the others motherfucking websites.</p>
                         </li>
                         <li>
-                            <h2 class="title"><a href="http://🚽💩.tk" rel="external">🚽💩</a></h2>
-                            <p>The coolest emoji domain ever.</p>
-                        </li>
-                        <li>
                             <h2 class="title"><a href="http://xxxxxxx.ooo" rel="external">XXXXXXXOOO</a></h2>
                             <p>Personal Dumplr.</p>
                         </li>
@@ -97,7 +92,7 @@
                         </li>
                         <li>
                             <h2 class="title"><a href="http://projetoaproxima.com.br" rel="external">Aproxima</a></h2>
-                            <p>Gastronomic Fair.</p>
+                            <p>Minas Gerais Gastronomic Fair.</p>
                         </li>
                     </ul>
                 </div>
