--- a/web/index.html
+++ b/web/index.html
@@ -13,18 +13,18 @@
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
         <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta property="og:image" content="http://setetres.st/img/share.png"/>
+        <meta property="og:image" content="http://setetres.st/img/share-v7.png"/>
         <meta property="og:url" content="http://setetres.st"/>
 
         <meta itemprop="name" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
         <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta itemprop="image" content="http://setetres.st/img/share.png"/>
+        <meta itemprop="image" content="http://setetres.st/img/share-v7.png"/>
         <meta itemprop="url" content="http://setetres.st"/>
 
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
         <meta name="twitter:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta name="twitter:image" content="http://setetres.st/img/share.png"/>
+        <meta name="twitter:image" content="http://setetres.st/img/share-v7.png"/>
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
         <link rel="icon" href="favicon.ico"/>
@@ -67,11 +67,11 @@
                             <p>Image placeholder for disgusting layouts.</p>
                         </li>
                         <li>
-                            <h2 class="title"><a href="http://ijwgh.club" rel="external">I just wanna go home</a></h2>
+                            <h2 class="title"><a href="http://ijwgh.club" rel="external">IJWGH</a></h2>
                             <p>Just random oddities from the internet.</p>
                         </li>
                         <li>
-                            <h2 class="title"><a href="http://evenbettermotherfucking.website" rel="external">Even better motherfucking website</a></h2>
+                            <h2 class="title"><a href="http://evenbettermotherfucking.website" rel="external">Even Better Motherfucking Website</a></h2>
                             <p>Even better than the others motherfucking websites.</p>
                         </li>
                         <li>
