--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,9 @@
         <script src="js/vendor/modernizr.js"></script>
     </head>
     <body>
+        <div id="loading" class="active">
+            <div class="loading-activity"></div>
+        </div>
         <div class="progress-container">
             <span class="progress-bar"></span>
         </div>
