--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,16 @@
                 <h1 class="logo title"><a href="/">Hello.</a><sup>7.0</sup></h1>
                 <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
                 <p>↕ scroll / <a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
+                <p class="special">
+                    v7.0a /
+                    <a href="http://v6.setetres.st" rel="external">6.0</a>
+                    <a href="http://v5.setetres.st" rel="external">5.0</a>
+                    <a href="http://v4.setetres.st" rel="external">4.0</a>
+                    <a href="http://v3.setetres.st" rel="external">3.0</a>
+                    <a href="http://v2.setetres.st" rel="external">2.0</a>
+                    <a href="http://1997.setetres.st" rel="external">1.997</a>
+                    <a href="http://v1.setetres.st" rel="external">1.0</a>
+                </p>
             </div>
         </header>
         <div id="main" role="main" class="main">
@@ -100,18 +110,6 @@
                     </ul>
                 </div>
                 <footer>
-                    <div class="center">
-                        <p>
-                            Archive ―
-                            <a href="http://v6.setetres.st" rel="external">6.0</a>
-                            <a href="http://v5.setetres.st" rel="external">5.0</a>
-                            <a href="http://v4.setetres.st" rel="external">4.0</a>
-                            <a href="http://v3.setetres.st" rel="external">3.0</a>
-                            <a href="http://v2.setetres.st" rel="external">2.0</a>
-                            <a href="http://1997.setetres.st" rel="external">1.997</a>
-                            <a href="http://v1.setetres.st" rel="external">1.0</a>
-                        </p>
-                    </div>
                 </footer>
             </div>
         </div>
