--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
         <header>
             <h1 class="logo title"><a href="/">Hello.</a><sup>7.0</sup></h1>
             <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
-            <p><span>↕ scroll</span> / <a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
+            <p><span>↕ scroll / </span><a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
             <p class="special">
                 v7.0a /
                 <a href="http://v6.setetres.st" rel="external">6.0</a>
