--- a/web/index.html
+++ b/web/index.html
@@ -41,26 +41,28 @@
             <span class="progress-bar"></span>
         </div>
         <audio id="glitch" preload="auto">
-            <source src="" type="audio/mpeg">
+            <source src="" type="audio/mpeg"/>
         </audio>
         <header>
-            <h1 class="logo title"><a href="/">Hello.</a><sup>7.0</sup></h1>
-            <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
-            <p><span>↕ scroll / </span><a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
-            <p class="special">
-                v7.0a /
-                <a href="http://v6.setetres.st" rel="external">6.0</a>
-                <a href="http://v5.setetres.st" rel="external">5.0</a>
-                <a href="http://v4.setetres.st" rel="external">4.0</a>
-                <a href="http://v3.setetres.st" rel="external">3.0</a>
-                <a href="http://v2.setetres.st" rel="external">2.0</a>
-                <a href="http://1997.setetres.st" rel="external">1.997</a>
-                <a href="http://v1.setetres.st" rel="external">1.0</a>
-            </p>
+            <div class="">
+                <h1 class="logo title"><a href="/">Hello.</a><sup>7.0</sup></h1>
+                <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
+                <p><span>↕ scroll / </span><a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
+                <p class="special">
+                    v7.0a /
+                    <a href="http://v6.setetres.st" rel="external">6.0</a>
+                    <a href="http://v5.setetres.st" rel="external">5.0</a>
+                    <a href="http://v4.setetres.st" rel="external">4.0</a>
+                    <a href="http://v3.setetres.st" rel="external">3.0</a>
+                    <a href="http://v2.setetres.st" rel="external">2.0</a>
+                    <a href="http://1997.setetres.st" rel="external">1.997</a>
+                    <a href="http://v1.setetres.st" rel="external">1.0</a>
+                </p>
+            </div>
         </header>
         <div id="main" role="main" class="main">
             <div class="row" id="home">
-                <div id="container"></div>
+                <div id="threejs"></div>
             </div>
             <div class="row" id="content">
                 <div class="tile">
@@ -116,6 +118,7 @@
         <script src="js/vendor.min.js"></script>
         <script src="threejs/libs.min.js"></script>
         <script src="js/main.min.js"></script>
+        <script src="js/vendor/dev/GGS.js"></script>
         <script>
 
             // analytics
