--- a/web/index.html
+++ b/web/index.html
@@ -45,18 +45,18 @@
         </audio>
         <header>
             <div class="">
-                <h1 class="logo title"><a href="/">Hello.</a><sup>7.1</sup></h1>
+                <h1 class="logo title"><a href="/">Hello.</a><sup>v7.1</sup></h1>
                 <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
                 <p><span>↕ scroll / </span><a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
                 <p class="special">
-                    v7.1b /
-                    <a href="http://v6.setetres.st" rel="external">6.0</a>
-                    <a href="http://v5.setetres.st" rel="external">5.0</a>
-                    <a href="http://v4.setetres.st" rel="external">4.0</a>
-                    <a href="http://v3.setetres.st" rel="external">3.0</a>
-                    <a href="http://v2.setetres.st" rel="external">2.0</a>
-                    <a href="http://1997.setetres.st" rel="external">1.997</a>
-                    <a href="http://v1.setetres.st" rel="external">1.0</a>
+                    v7.1 /
+                    <a href="http://v6.setetres.st" rel="external">v6</a>
+                    <a href="http://v5.setetres.st" rel="external">v5</a>
+                    <a href="http://v4.setetres.st" rel="external">v4</a>
+                    <a href="http://v3.setetres.st" rel="external">v3</a>
+                    <a href="http://v2.setetres.st" rel="external">v2</a>
+                    <a href="http://1997.setetres.st" rel="external">v1.997</a>
+                    <a href="http://v1.setetres.st" rel="external">v1</a>
                 </p>
             </div>
         </header>
