--- a/web/index.html
+++ b/web/index.html
@@ -88,6 +88,10 @@
                             <p>Platform about tattoos for fearless people.</p>
                         </li>
                         <li>
+                            <h2 class="title"><a href="http://led.moda" rel="external">LED</a></h2>
+                            <p>Brazillian Fashion brand.</p>
+                        </li>
+                        <li>
                             <h2 class="title"><a href="http://curis.co" rel="external">Curisco</a></h2>
                             <p>Office Pocket-Gardening.</p>
                         </li>
