--- a/web/index.html
+++ b/web/index.html
@@ -92,6 +92,10 @@
                             <p>Brazillian Fashion brand.</p>
                         </li>
                         <li>
+                            <h2 class="title"><a href="http://itambe.com.br" rel="external">Itambé</a></h2>
+                            <p>Milk is everything.</p>
+                        </li>
+                        <li>
                             <h2 class="title"><a href="http://curis.co" rel="external">Curisco</a></h2>
                             <p>Office Pocket-Gardening.</p>
                         </li>
